--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello world
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>GitHub</title>
+	<style type="text/css">
+		h1{
+			color: #e4393c;
+		}
+	</style>
+</head>
+<body>
+	<h1>这是我的GitHub主页</h1>
+</body>
+</html>
